Fix copy code button overlap

--- a/styles/hljs.css
+++ b/styles/hljs.css
@@ -8,10 +8,7 @@ pre {
 pre code.hljs {
   display: block;
   overflow-x: auto;
-  padding: 1em;
-}
-code.hljs {
-  padding: 3px 5px;
+  padding: 0.75rem;
 }
 
 /*!
